language-server/src/tests/snapshots/gleam_language_server__tests__action__turn_call_with_multiple_arguments_into_use.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  wibble(1, 2, fn(a) { todo })\n}\n\nfn wibble(m, n, f) {\n  f(1)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  wibble(1, 2, fn(a) { todo })
                       ↑      
}

fn wibble(m, n, f) {
  f(1)
}


----- AFTER ACTION

pub fn main() {
  use a <- wibble(1, 2)
  todo
}

fn wibble(m, n, f) {
  f(1)
}
