language-server/src/tests/snapshots/gleam_language_server__tests__action__type_variables_from_other_functions_do_not_change_annotations.snap
---
source: language-server/src/tests/action.rs
expression: "\nfn wibble(a: a, b: b, c: c) -> d { todo }\n\nfn pair(a, b) {\n  #(a, b)\n}\n"
---
----- BEFORE ACTION

fn wibble(a: a, b: b, c: c) -> d { todo }

fn pair(a, b) {
   ↑           
  #(a, b)
}


----- AFTER ACTION

fn wibble(a: a, b: b, c: c) -> d { todo }

fn pair(a: a, b: b) -> #(a, b) {
  #(a, b)
}
