language-server/src/tests/snapshots/gleam_language_server__tests__action__type_variables_from_other_functions_do_not_change_annotations_constant.snap
---
source: language-server/src/tests/action.rs
expression: "\nfn wibble(a: a, b: b, c: c) -> d { todo }\n\nconst empty = []\n"
---
----- BEFORE ACTION

fn wibble(a: a, b: b, c: c) -> d { todo }

const empty = []
      ↑         


----- AFTER ACTION

fn wibble(a: a, b: b, c: c) -> d { todo }

const empty: List(a) = []
