language-server/src/tests/snapshots/gleam_language_server__tests__action__type_variables_in_let_bindings_are_considered_when_adding_annotations.snap
---
source: language-server/src/tests/action.rs
expression: "\nfn wibble(a, b, c) {\n  let x: a = todo\n  fn(a: b, b: c) -> d {\n    todo\n  }\n}\n"
---
----- BEFORE ACTION

fn wibble(a, b, c) {
   ↑                
  let x: a = todo
  fn(a: b, b: c) -> d {
    todo
  }
}


----- AFTER ACTION

fn wibble(a: e, b: f, c: g) -> fn(b, c) -> h {
  let x: a = todo
  fn(a: b, b: c) -> d {
    todo
  }
}
